--- a/schoolnet_coeff_static_friction/index.html
+++ b/schoolnet_coeff_static_friction/index.html
@@ -17,11 +17,7 @@
     <link rel="stylesheet" href="assets/css/device.css">
 </head>
 
-
-
-
 <body>
-
     <div class="wrapper disnone">
         <div class="container-so launch">
             <div class="exp_header">
@@ -76,65 +72,78 @@
                 <div class="exp_body_header"></div>
                 <div class="exp_body_content">
                     <div id="split-main" class="split">
-                        <div class="content_wrapper">
-                            <div class="planeImageDiv">
-                                <div class="inside_wrapper">
-                                    <img class="bottom_image" src="assets/images/Bottom_Wood.png">
-                                    <div class="rotatingDiv">
-                                        <img class="top_image" src="assets/images/Top_Wood.png">
-                                        <img class="surface_image" src="assets/images/green_surface.svg">
-                                        <img class="weight_image" src="assets/images/weight.png">
+                        <div id="split-0">
+                            <div class="content_wrapper .content-container">
+                                <div class="planeImageDiv">
+                                    <div class="inside_wrapper">
+                                        <img class="bottom_image" src="assets/images/Bottom_Wood.png">
+                                        <div class="rotatingDiv">
+                                            <img class="top_image" src="assets/images/Top_Wood.png">
+                                            <img class="surface_image" src="assets/images/green_surface.svg">
+                                            <img class="weight_image" src="assets/images/weight.png">
+                                        </div>
+                                        <img class="scale_image" src="assets/images/scale.png">
                                     </div>
-                                    <img class="scale_image" src="assets/images/scale.png">
-                                </div>
-                                <div class="row content_div">
-                                    <div class="col-lg-4 col-md-4 col-sm-12">
-                                        <div class="sliderWrapper sliderMassWrapper">
-                                            <div class="slider-label">Mass of Body A</div>
-                                            <div class="sliderInnerWrapper">
-                                                <div class="sliderContainer">
+                                    <div class="row content_div">
+                                        <div class="col-lg-4 col-md-4 col-sm-12">
+                                            <div class="sliderWrapper sliderMassWrapper">
+                                                <div class="slider-label">Mass of Body A</div>
+                                                <div class="sliderInnerWrapper">
+                                                    <div class="sliderContainer">
 
-                                                    <span class="min">100</span>
-                                                    <span class="leftbar">|</span>
-                                                    <input class="slider" type="range" id="sliderMass" name="mass"
-                                                        min="100" max="200" step="1" value="100"
-                                                        style="background-size:0% 100%;">
-                                                    <span class="max">200</span>
-                                                    <span class="leftbar">|</span>
+                                                        <span class="min">100</span>
+                                                        <span class="leftbar">|</span>
+                                                        <input class="slider" type="range" id="sliderMass" name="mass"
+                                                            min="100" max="200" step="1" value="100"
+                                                            style="background-size:0% 100%;">
+                                                        <span class="max">200</span>
+                                                        <span class="leftbar">|</span>
+                                                    </div>
+                                                </div>
+                                                <div class="inputContainer body_mass">
+                                                    <span class="input_box inputMass">100</span><span
+                                                        class="unit">gm</span>
                                                 </div>
                                             </div>
-                                            <div class="inputContainer body_mass">
-                                                <span class="input_box inputMass">100</span><span class="unit">gm</span>
+
+                                        </div>
+                                        <div class="col-lg-4 col-md-4 col-sm-12">
+                                            <div class="AngleofPlane_div">
+                                                <div class="slider-label">Angle of Plane</div>
+                                            <button class="popup_btn bigLeftBtn">
+                                                <div class="triangle_left"></div>
+                                            </button>
+                                            <button class="popup_btn smallLeftBtn">
+                                                <div class="triangle_left"></div>
+                                            </button>
+                                            <span class="angle_div"><span
+                                                    class="angle_plane">0</span><span><sup>0</sup></span></span>
+                                            <button class="popup_btn smallRightBtn">
+                                                <div class="triangle_right"></div>
+                                            </button>
+                                            <button class="popup_btn bigRightBtn">
+                                                <div class="triangle_right"></div>
+                                            </button>
                                             </div>
                                         </div>
+                                        <div class="col-lg-4 col-md-4 col-sm-12 ">
+                                            <div class="surface_div">
+                                                <p class="text-center">Surfaces</p>
+                                                <button class="btn glass_btn"><img
+                                                        src="assets/images/surface_01.png" /></button>
+                                                <button class="btn green_btn"><img
+                                                        src="assets/images/surface_02.png" /></button>
+                                                <button class="btn wood_btn"><img
+                                                        src="assets/images/surface_03.png" /></button>
+                                            </div>
+                                        </div>
+                                    </div>
 
-                                    </div>
-                                    <div class="col-lg-4 col-md-4 col-sm-12">
-                                        <div class="slider-label">Angle of Plane</div>
-                                        <button class="popup_btn bigLeftBtn">
-                                            <div class="triangle_left"></div>
-                                        </button>
-                                        <button class="popup_btn smallLeftBtn">
-                                            <div class="triangle_left"></div>
-                                        </button>
-                                        <span class="angle_div"><span class="angle_plane">0</span><span><sup>0</sup></span></span>
-                                        <button class="popup_btn smallRightBtn">
-                                            <div class="triangle_right"></div>
-                                        </button>
-                                        <button class="popup_btn bigRightBtn">
-                                            <div class="triangle_right"></div>
-                                        </button>
-                                    </div>
-                                    <div class="col-lg-4 col-md-4 col-sm-12 surface_div">
-                                        <p class="text-center">Surfaces</p>
-                                        <button class="btn glass_btn"><img src="assets/images/surface_01.png"/></button>
-                                        <button class="btn green_btn"><img src="assets/images/surface_02.png"/></button>
-                                        <button class="btn wood_btn"><img src="assets/images/surface_03.png"/></button>
-                                    </div>
                                 </div>
-
                             </div>
-                            <div class="row bottom_content ">
+                        </div>
+                        <div id="split-1">
+                            <div class="row bottom_content .content-container">
                                 <div class="col-md-6 col-sm-12">
                                     <div class="row">
                                         <div class="col-md-6 col-sm-6 margin-top-10 padding-right-0">
@@ -174,10 +183,8 @@
                                 </div>
 
                             </div>
-
                         </div>
                     </div>
-
                     <div class="popup worksheet">
                         <div class="container">
                             <div class="popuphead">
@@ -380,23 +387,6 @@
 
 
                                     </p>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cust-popup settings">
-                        <div class="container">
-                            <div class="popupcontent">
-
-                                <div class="row">
-                                    <div class="col settingsCol">
-                                        <div class="zoom4">
-
-
-
-                                        </div>
-                                    </div>
                                 </div>
 
                             </div>
@@ -677,11 +667,13 @@
     <script src="assets/plugins/jquery-ui-touch/jquery.ui.touch.js"></script>
     <script src="assets/plugins/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/preloader.js"></script>
+    <script src="assets/plugins/splitjs/split.min.js"></script>
     <script type="text/javascript" src="assets/plugins/hammer.min.js"></script>
     <script type="text/javascript" src="assets/js/hammer-manager.js"></script>
     <script src="assets/js/themes.js"></script>
     <script src="assets/lib/guide-tour/guide-tour-data.js"></script>
     <script src="assets/lib/guide-tour/guide-tour.js"></script>
+    <script src="assets/js/screen_splitter.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/activity.js"></script>
 
