--- a/schoolnet_coeff_static_friction/index.html
+++ b/schoolnet_coeff_static_friction/index.html
@@ -73,7 +73,7 @@
                 <div class="exp_body_content">
                     <div id="split-main" class="split">
                         <div id="split-0">
-                            <div class="content_wrapper .content-container">
+                            <div class="content_wrapper content-container">
                                 <div class="planeImageDiv">
                                     <div class="inside_wrapper">
                                         <img class="bottom_image" src="assets/images/Bottom_Wood.png">
@@ -143,41 +143,39 @@
                             </div>
                         </div>
                         <div id="split-1">
-                            <div class="row bottom_content .content-container">
+                            <div class="row bottom_content content-container">
                                 <div class="col-md-6 col-sm-12">
-                                    <div class="row">
-                                        <div class="col-md-6 col-sm-6 margin-top-10 padding-right-0">
-                                            <div class="slider-label">Weight of Body A =</div>
-                                            <div class="">
+                                        <div class="margin-top-10 padding-right-0">
+                                            <div class="Weight_div">
+                                            <div class="slider-label">Weight of Body A</div>
+                                            
                                                 <span
                                                     class="input_box inputMass">100</span><span>&nbsp;&nbsp;&#x2716;&nbsp;&nbsp;980
                                                     <b>&nbsp;=&nbsp;</b> </span>
+                                                        <span class="cal_weight input_box">98000</span><span> dynes</span>
+                                                    
                                             </div>
+                                            <div class="f_div">
                                             <div class="slider-label margin-top-10">Frictional Force
                                             </div>
                                             <div class="">
                                                 <span class="fric_force input_box">392.4</span>
                                             </div>
-
-
                                         </div>
-                                        <div class="col-md-6 col-sm-6 margin-top-10">
-                                            <div class="slider-label">dynes</div>
-                                            <div class="">
-                                                <span class="cal_weight input_box">98000</span>
-                                            </div>
+                                        <div class="s_div">
                                             <div class="slider-label margin-top-10">Sliding Force</div>
                                             <div class="">
                                                 <span class="input_box sliding_force">0</span>
                                             </div>
                                         </div>
-                                    </div>
+
+                                        </div>
 
                                 </div>
                                 <div class="col-md-6 col-sm-12 margin-top-10">
                                     <div class="slider-label">Acceleration</div>
                                     <div class="">
-                                        <span class="accleration input_box">0</span>
+                                        <span class="accleration input_box">0 </span><span> cm/s<sup>2</sup></span>
                                     </div>
 
                                 </div>
@@ -331,12 +329,46 @@
                                     <p>Select the sliding surface for the experiment.Click on a surface to select from
                                         the different surfaces listed on the screen.
                                     </p>
+                                    <div class="procSliderWrapper">
+                                        <div class="procInnerSliderWrapper">
+                                    <div class="surface_div">
+                                        <p class="text-center">Surfaces</p>
+                                        <button class="btn glass_btn"><img
+                                                src="assets/images/surface_01.png" /></button>
+                                        <button class="btn green_btn"><img
+                                                src="assets/images/surface_02.png" /></button>
+                                        <button class="btn wood_btn"><img
+                                                src="assets/images/surface_03.png" /></button>
+                                    </div>
+                                    </div>
+                                    </div>
                                 </div>
                                 <hr>
                                 <div class="procBox container">
                                     <span class="procstepno">2.</span>
                                     <p>Specify the mass of body A using the slider.
                                     </p>
+                                    <div class="procSliderWrapper">
+                                        <div class="sliderWrapper sliderMassWrapper">
+                                        <div class="slider-label">Mass of Body A</div>
+                                        <div class="sliderInnerWrapper">    
+                                            <div class="sliderContainer">
+
+                                                <span class="min">100</span>
+                                                <span class="leftbar">|</span>
+                                                <input class="slider" type="range" id="sliderMass" name="mass"
+                                                    min="100" max="200" step="1" value="100"
+                                                    style="background-size:0% 100%;" disabled>
+                                                <span class="max">200</span>
+                                                <span class="leftbar">|</span>
+                                            </div>
+                                        </div>
+                                        <div class="inputContainer body_mass">
+                                            <span class="input_box">100</span><span
+                                                class="unit">gm</span>
+                                        </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <hr>
                                 <div class="procBox container">
@@ -345,11 +377,45 @@
                                         buttons change the angle by 5 degrees while the smaller buttons change by 1
                                         degree.
                                     </p>
+                                    <div class="AngleofPlane_div">
+                                        <div class="slider-label">Angle of Plane</div>
+                                    <button class="popup_btn bigLeftBtn" disabled>
+                                        <div class="triangle_left"></div>
+                                    </button>
+                                    <button class="popup_btn smallLeftBtn" disabled>
+                                        <div class="triangle_left"></div>
+                                    </button>
+                                    <span class="angle_div"><span
+                                            class="angle_plane">0</span><span><sup>0</sup></span></span>
+                                    <button class="popup_btn smallRightBtn" disabled>
+                                        <div class="triangle_right"></div>
+                                    </button>
+                                    <button class="popup_btn bigRightBtn" disabled>
+                                        <div class="triangle_right"></div>
+                                    </button>
+                                    </div>
                                 </div>
                                 <hr>
                                 <div class="procBox container">
                                     <span class="procstepno">4.</span>
                                     <p>Record the angle at which the block just starts to slide.</p>
+                                    <div class="AngleofPlane_div">
+                                        <div class="slider-label">Angle of Plane</div>
+                                    <button class="popup_btn bigLeftBtn" disabled>
+                                        <div class="triangle_left"></div>
+                                    </button>
+                                    <button class="popup_btn smallLeftBtn" disabled>
+                                        <div class="triangle_left"></div>
+                                    </button>
+                                    <span class="angle_div"><span
+                                            class="angle_plane">0</span><span><sup>0</sup></span></span>
+                                    <button class="popup_btn smallRightBtn" disabled>
+                                        <div class="triangle_right"></div>
+                                    </button>
+                                    <button class="popup_btn bigRightBtn" disabled>
+                                        <div class="triangle_right"></div>
+                                    </button>
+                                    </div>
                                 </div>
                                 <hr>
                                 <div class="procBox container">
@@ -361,6 +427,23 @@
                                         arrow buttons to increase the angle by 1 degree to precisely get the angle at
                                         which the block starts to slide.
                                     </p>
+                                    <div class="AngleofPlane_div">
+                                        <div class="slider-label">Angle of Plane</div>
+                                    <button class="popup_btn bigLeftBtn" disabled>
+                                        <div class="triangle_left"></div>
+                                    </button>
+                                    <button class="popup_btn smallLeftBtn" disabled>
+                                        <div class="triangle_left"></div>
+                                    </button>
+                                    <span class="angle_div"><span
+                                            class="angle_plane">0</span><span><sup>0</sup></span></span>
+                                    <button class="popup_btn smallRightBtn" disabled>
+                                        <div class="triangle_right"></div>
+                                    </button>
+                                    <button class="popup_btn bigRightBtn" disabled>
+                                        <div class="triangle_right"></div>
+                                    </button>
+                                    </div>
                                 </div>
                                 <hr>
                                 <div class="procBox container">
@@ -368,6 +451,26 @@
                                     <p>Click on the Calculate button to view the reading and the calculations.
 
                                     </p>
+                                    <div class="btn-wrap btn-wrap-calculations">
+                                        <button  class="btn btn_calculations" title="" data-toggle="tooltip" data-bs-original-title="Calculations" disabled>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="-10 -8 46 46">
+                                    <g id="Layer_2" data-name="Layer 2">
+                                        <g id="Layer_1-2" data-name="Layer 1">
+                                            <rect class="cls-1" x="0.5" y="0.5" width="22.17" height="30" rx="1.3"></rect>
+                                            <rect class="cls-1" x="4.41" y="4.41" width="14.35" height="5.22"></rect>
+                                            <line class="cls-1" x1="5.72" y1="13.54" x2="5.72" y2="18.76"></line>
+                                            <line class="cls-1" x1="3.11" y1="16.15" x2="8.33" y2="16.15"></line>
+                                            <line class="cls-1" x1="14.85" y1="16.15" x2="20.07" y2="16.15"></line>
+                                            <line class="cls-1" x1="14.85" y1="22.67" x2="20.07" y2="27.89"></line>
+                                            <line class="cls-1" x1="20.07" y1="22.67" x2="14.85" y2="27.89"></line>
+                                            <line class="cls-1" x1="3.11" y1="25.28" x2="8.33" y2="25.28"></line>
+                                            <circle class="cls-1" cx="5.72" cy="22.67" r="0.65"></circle>
+                                            <circle class="cls-1" cx="5.72" cy="27.89" r="0.65"></circle>
+                                        </g>
+                                    </g>
+                                </svg>
+                                        </button>
+                                    </div>
                                 </div>
                                 <hr>
                                 <div class="procBox container">
@@ -377,16 +480,85 @@
 
 
                                     </p>
+                                    <div class="procSliderWrapper">
+                                        <div class="procInnerSliderWrapper">
+                                    <div class="surface_div">
+                                        <p class="text-center">Surfaces</p>
+                                        <button class="btn glass_btn"><img
+                                                src="assets/images/surface_01.png" /></button>
+                                        <button class="btn green_btn"><img
+                                                src="assets/images/surface_02.png" /></button>
+                                        <button class="btn wood_btn"><img
+                                                src="assets/images/surface_03.png" /></button>
+                                    </div>
+                                    </div>
+                                    </div>
+                                    <div class="AngleofPlane_div">
+                                        <div class="slider-label">Angle of Plane</div>
+                                    <button class="popup_btn bigLeftBtn" disabled>
+                                        <div class="triangle_left"></div>
+                                    </button>
+                                    <button class="popup_btn smallLeftBtn" disabled>
+                                        <div class="triangle_left"></div>
+                                    </button>
+                                    <span class="angle_div"><span
+                                            class="angle_plane">0</span><span><sup>0</sup></span></span>
+                                    <button class="popup_btn smallRightBtn" disabled>
+                                        <div class="triangle_right"></div>
+                                    </button>
+                                    <button class="popup_btn bigRightBtn" disabled>
+                                        <div class="triangle_right"></div>
+                                    </button>
+                                    </div>
+
                                 </div>
                                 <hr>
                                 <div class="procBox container">
                                     <span class="procstepno">8.</span>
-                                    <p>8)For a given surface, repeat the procedure for different masses of body A and
+                                    <p>For a given surface, repeat the procedure for different masses of body A and
                                         comapre the results with previous readings.
 
 
 
                                     </p>
+                                    <div class="AngleofPlane_div">
+                                        <div class="slider-label">Angle of Plane</div>
+                                    <button class="popup_btn bigLeftBtn" disabled>
+                                        <div class="triangle_left"></div>
+                                    </button>
+                                    <button class="popup_btn smallLeftBtn" disabled>
+                                        <div class="triangle_left"></div>
+                                    </button>
+                                    <span class="angle_div"><span
+                                            class="angle_plane">0</span><span><sup>0</sup></span></span>
+                                    <button class="popup_btn smallRightBtn" disabled>
+                                        <div class="triangle_right"></div>
+                                    </button>
+                                    <button class="popup_btn bigRightBtn" disabled>
+                                        <div class="triangle_right"></div>
+                                    </button>
+                                    </div>
+                                    <div class="procSliderWrapper margin-top-10">
+                                        <div class="sliderWrapper sliderMassWrapper">
+                                        <div class="slider-label">Mass of Body A</div>
+                                        <div class="sliderInnerWrapper">    
+                                            <div class="sliderContainer">
+
+                                                <span class="min">100</span>
+                                                <span class="leftbar">|</span>
+                                                <input class="slider" type="range" id="sliderMass" name="mass"
+                                                    min="100" max="200" step="1" value="100"
+                                                    style="background-size:0% 100%;" disabled>
+                                                <span class="max">200</span>
+                                                <span class="leftbar">|</span>
+                                            </div>
+                                        </div>
+                                        <div class="inputContainer body_mass">
+                                            <span class="input_box">100</span><span
+                                                class="unit">gm</span>
+                                        </div>
+                                        </div>
+                                    </div>
                                 </div>
 
                             </div>
