--- a/schoolnet_coeff_static_friction/index.html
+++ b/schoolnet_coeff_static_friction/index.html
@@ -81,6 +81,7 @@
                                             <img class="top_image" src="assets/images/Top_Wood.png">
                                             <img class="surface_image" src="assets/images/green_surface.svg">
                                             <img class="weight_image" src="assets/images/weight.png">
+                                            <div class="weight_A">A</div>
                                         </div>
                                         <img class="scale_image" src="assets/images/scale.png">
                                     </div>
@@ -126,7 +127,7 @@
                                             </button>
                                             </div>
                                         </div>
-                                        <div class="col-lg-4 col-md-4 col-sm-12 ">
+                                        <div class="col-lg-4 col-md-4 col-sm-12">
                                             <div class="surface_div">
                                                 <p class="text-center">Surfaces</p>
                                                 <button class="btn glass_btn"><img
