Changes for angle

--- a/schoolnet_coeff_static_friction/index.html
+++ b/schoolnet_coeff_static_friction/index.html
@@ -622,7 +622,7 @@
                                 </svg>
                             </button>
                         </div>
-                        <div class="btn-wrap btn-wrap-settings">
+                        <!-- <div class="btn-wrap btn-wrap-settings">
                             <button id="btn_settings" class="btn btn_settings" title="Settings" data-toggle="tooltip">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="-6 -8 46 46">
                                     <g id="Layer_2" data-name="Layer 2">
@@ -643,7 +643,7 @@
                                     </g>
                                 </svg>
                             </button>
-                        </div>
+                        </div> -->
                         <div class="btn-wrap btn-wrap-calculations">
                             <button id="btn_calculations" class="btn btn_calculations" title="Calculations"
                                 data-toggle="tooltip">
