Pinch zoom, Guid tour issues.

--- a/Coefficient of Static Friction – Inclined Plane/index.html
+++ b/Coefficient of Static Friction – Inclined Plane/index.html
@@ -73,6 +73,7 @@
                 <div class="exp_body_content">
                     <div id="split-main" class="split">
                         <div id="split-0">
+                            <div class="contWraper zoom1">
                             <div class="content_wrapper content-container">
                                 <div class="planeImageDiv">
                                     <div class="inside_wrapper">
@@ -113,18 +114,18 @@
                                         <div class="col-lg-4 col-md-4 col-sm-12">
                                             <div class="AngleofPlane_div">
                                                 <div class="slider-label">Angle of Plane</div>
-                                                <button class="popup_btn bigLeftBtn">
+                                                <button class="popup_btn bigLeftBtn" id="btnbigLeftBtn">
                                                     <div class="triangle_left"></div>
                                                 </button>
-                                                <button class="popup_btn smallLeftBtn">
+                                                <button class="popup_btn smallLeftBtn" id="btnsmallLeftBtn">
                                                     <div class="triangle_left"></div>
                                                 </button>
                                                 <span class="angle_div"><span
                                                         class="angle_plane">0</span><span><sup>0</sup></span></span>
-                                                <button class="popup_btn smallRightBtn">
+                                                <button class="popup_btn smallRightBtn" id="btnsmallRightBtn">
                                                     <div class="triangle_right"></div>
                                                 </button>
-                                                <button class="popup_btn bigRightBtn">
+                                                <button class="popup_btn bigRightBtn" id="btnbigRightBtn">
                                                     <div class="triangle_right"></div>
                                                 </button>
                                             </div>
@@ -145,7 +146,9 @@
                                 </div>
                             </div>
                         </div>
+                        </div>
                         <div id="split-1">
+                            <div class="contWraper zoom2">
                             <div class="content-container">
                                 <div class="row bottom_content">
                                     <div class="col-md-6 col-sm-12">
@@ -185,6 +188,7 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
                         </div>
                     </div>
                     <div class="popup worksheet">
