Changes for angle and doubletap

--- a/Coefficient of Static Friction – Inclined Plane/index.html
+++ b/Coefficient of Static Friction – Inclined Plane/index.html
@@ -820,7 +820,7 @@
             <div class="modal-content" style="border: 0px;">
                 <div class="modal-body" style="text-align: center;">
                     <p><img src="assets/images/phone-portrait-pngrepo-com.png" width="100px"></p>
-                    <p>This Exploriment is best viewed in portrait orientation.</p>
+                    <p>This exploriment is best viewed in portrait orientation.</p>
                 </div>
             </div>
         </div>
